axxiax86-64: Change tuning from corei7 to core2
The SNR core will be based on Atom, not corei7. Since the hardware
will be available soon, move to atom file-tunings.

Atom tunings are the same with core2, so use core2_64 tune and
core2_32 for multilib. From meta/conf/machine/include/tune-atom.inc:

require conf/machine/include/tune-core2.inc

A0237 - Change the Tuning for SNR from corei7 to Atom

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -4,6 +4,8 @@
 
 require conf/machine/intel-corei7-64.conf
 
+DEFAULTTUNE = "core2-64"
+
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 PREFERRED_VERSION_linux-yocto ?= "4.9%"
 
@@ -17,7 +19,7 @@ KEEPUIMAGE = "no"
 
 APPEND = "rootwait console=ttyS4,115200 console=tty0 intel_iommu=on"
 
-DEFAULTTUNE_virtclass-multilib-lib32 = "corei7-32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
 MULTILIBS = "multilib:lib32"
 
 IMAGE_FSTYPES += " hddimg"
