--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -17,7 +17,7 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
-APPEND = "rootwait console=ttyS4,115200 console=tty0 intel_iommu=on"
+APPEND = "console=tty0 console=ttyS6,115200n8 idle=poll maxcpus=1"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
 MULTILIBS = "multilib:lib32"
