Remove 'maxcpus=1' from the Boot Args
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -17,7 +17,7 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
-APPEND = "console=tty0 console=ttyS5,115200n8 idle=poll maxcpus=1"
+APPEND = "console=tty0 console=ttyS5,115200n8 idle=poll"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
 MULTILIBS = "multilib:lib32"
