Update the Appended Boot Arguments
As the console on VCN is the serial port (not VGA), change
the order of the console arguments.

Add 'idle=poll' to work around a hardware problem.

Remove 'rootwait' as it is already in the original args.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -17,7 +17,7 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
-APPEND = "rootwait console=ttyS4,115200 console=tty0 intel_iommu=on"
+APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
 MULTILIBS = "multilib:lib32"
