axxiax86-64: Set serial console from local.conf
Create the posibility to set the serial console in local.conf
depending on the bios you are using.

This can be done with SNR_SERIAL_CONSOLE variable which can be
overwriten in local.conf. The default value is ttyS4, but some
old bios use ttyS5 or ttyS6:

   SNR_SERIAL_CONSOLE = "ttyS5"

The change of the variable will afect all the image fstypes used
for axxiax86-64 machine, including wic, iso and hddimg.

A0240 - Yocto Images and console=ttyS?

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -17,7 +17,12 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
-APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
+SNR_SERIAL_CONSOLE ?= "ttyS4"
+APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
+GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
+
+WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot rmc-boot", \
+	     "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", "mkefidisk.wks", d)}"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
 MULTILIBS = "multilib:lib32"
