Update the Exampble bblayers.conf File
Add meta-security and, from meta-openembeded, meta-python.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -12,15 +12,9 @@ BBLAYERS ?= " \
   ##OEROOT##/../meta-openembedded/meta-networking \
   ##OEROOT##/../meta-openembedded/meta-filesystems \
   ##OEROOT##/../meta-openembedded/meta-python \
+  ##OEROOT##/../meta-openembedded/meta-perl \
   ##OEROOT##/../meta-virtualization \
-  ##OEROOT##/../meta-intel \
-  ##OEROOT##/../meta-intel-axxia \
-  ##OEROOT##/../meta-intel-axxia/meta-intel-snr \
-  "
-
-BBLAYERS_NON_REMOVABLE ?= " \
-  ##OEROOT##/meta \
-  ##OEROOT##/meta-poky \
+  ##OEROOT##/../meta-security \
   ##OEROOT##/../meta-intel \
   ##OEROOT##/../meta-intel-axxia \
   ##OEROOT##/../meta-intel-axxia/meta-intel-snr \
