Change 'simics' to 'snr'
As hardware is now available, 'simics' no longer makes sense
as a RUNTARGET.  The 'snr' RUNTARGET should produce binaries
that are usable in ASE and on the hardware.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,7 +1,7 @@
 MACHINE = "axxiax86-64"
 
-# System where the image will run: simics, frio
-RUNTARGET = "simics"
+# System where the image will run: snr, frio
+RUNTARGET = "snr"
 
 # Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt
 #                   linux-intel, linux-intel-rt
