--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/snr-runtarget.cfg
@@ -95,3 +95,13 @@ CONFIG_SERIAL_8250_RSA=y
 CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_LRW=y
+
+CONFIG_HW_RANDOM_TPM=m
+CONFIG_TCG_TPM=m
+CONFIG_TCG_TIS_CORE=m
+CONFIG_TCG_TIS=m
+CONFIG_TCG_TIS_I2C_INFINEON=m
+CONFIG_TCG_NSC=m
+CONFIG_TCG_ATMEL=m
+CONFIG_TCG_INFINEON=m
+CONFIG_TCG_CRB=m
