Include the TPM2 Tools in 'axxia-image-vcn'
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -15,6 +15,7 @@ BBLAYERS ?= " \
   ##OEROOT##/../meta-openembedded/meta-perl \
   ##OEROOT##/../meta-virtualization \
   ##OEROOT##/../meta-security \
+  ##OEROOT##/../meta-security/meta-tpm \
   ##OEROOT##/../meta-intel \
   ##OEROOT##/../meta-intel-axxia \
   ##OEROOT##/../meta-intel-axxia/meta-intel-snr \
