--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -17,6 +17,8 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
+SERIAL_CONSOLES = "115200;ttyS4 115200;ttyS5 115200;ttyS6"
+
 SNR_SERIAL_CONSOLE ?= "ttyS4"
 APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
 GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
