--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -45,4 +45,11 @@ CONFIG_9P_FS_POSIX_ACL=y
 
 CONFIG_NETWORK_PHY_TIMESTAMPING=y
 
+CONFIG_IGB=y
+CONFIG_IGBVF=y
+CONFIG_IXGB=y
+CONFIG_IXGBE=y
+# CONFIG_I40E is not set
+# CONFIG_I40EVF is not set
+
 # CONFIG_SERIAL_8250_DMA is not set
