Enable VFIO Support for All Run Targets
Prior to this commit, VFIO was only enabled for emulation.
This commit enables it for all run targets.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -53,3 +53,7 @@ CONFIG_IXGBE=y
 # CONFIG_I40EVF is not set
 
 # CONFIG_SERIAL_8250_DMA is not set
+
+CONFIG_VFIO_NOIOMMU=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_KVM_VFIO=y
