--- a/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
@@ -37,3 +37,6 @@ CONFIG_DEVKMEM=y
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
+CONFIG_VFIO_NOIOMMU=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_KVM_VFIO=y
