--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -57,3 +57,291 @@ CONFIG_IXGBE=y
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
+
+CONFIG_ARCH_CPM3=y
+CONFIG_BLK_DEV_NBD=y
+CONFIG_BLK_DEV_NVME=y
+CONFIG_BLK_DEV_PMEM=y
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
+CONFIG_BRIDGE_EBT_802_3=y
+CONFIG_BRIDGE_EBT_AMONG=y
+CONFIG_BRIDGE_EBT_ARPREPLY=y
+CONFIG_BRIDGE_EBT_ARP=y
+CONFIG_BRIDGE_EBT_BROUTE=y
+CONFIG_BRIDGE_EBT_DNAT=y
+CONFIG_BRIDGE_EBT_IP6=y
+CONFIG_BRIDGE_EBT_IP=y
+CONFIG_BRIDGE_EBT_LIMIT=y
+CONFIG_BRIDGE_EBT_LOG=y
+CONFIG_BRIDGE_EBT_MARK_T=y
+CONFIG_BRIDGE_EBT_MARK=y
+CONFIG_BRIDGE_EBT_NFLOG=y
+CONFIG_BRIDGE_EBT_PKTTYPE=y
+CONFIG_BRIDGE_EBT_REDIRECT=y
+CONFIG_BRIDGE_EBT_SNAT=y
+CONFIG_BRIDGE_EBT_STP=y
+CONFIG_BRIDGE_EBT_T_FILTER=y
+CONFIG_BRIDGE_EBT_T_NAT=y
+CONFIG_BRIDGE_EBT_VLAN=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_BRIDGE_NF_EBTABLES=y
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_BRIDGE=y
+CONFIG_BTT=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_CLS_U32_MARK=y
+CONFIG_CLS_U32_PERF=y
+CONFIG_CONTEXT_TRACKING=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_IDLE_GOV_LADDER=y
+CONFIG_CRYPTO_DEV_QAT_C4XXX=m
+CONFIG_CRYPTO_DEV_QAT_INLINE=m
+CONFIG_CRYPTO_DEV_QAT=m
+CONFIG_CRYPTO_DEV_QAT_USDM=m
+CONFIG_CRYPTO_SEQIV=y
+CONFIG_CRYPTO_SHA512=y
+CONFIG_DEBUG_GPIO=y
+CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_SECTION_MISMATCH=y
+CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
+CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_DETECT_HUNG_TASK=y
+CONFIG_DM_VERITY=y
+CONFIG_EARLY_PRINTK_EFI=y
+CONFIG_EFI_CAPSULE_LOADER=y
+CONFIG_EFI_MIXED=y
+CONFIG_EFIVAR_FS=y
+CONFIG_EFI_VARS=y
+CONFIG_EMBEDDED=y
+CONFIG_EXT2_FS=y
+CONFIG_EXT3_FS=y
+CONFIG_FRAME_WARN=1024
+CONFIG_GACT_PROB=y
+CONFIG_GPIO_PROPNAME_LEN=64
+CONFIG_I40EVF=y
+CONFIG_I40E=y
+CONFIG_IGBVF=y
+CONFIG_IGB=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_NAT=y
+CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_SECURITY=y
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
+CONFIG_IP6_NF_TARGET_NPT=y
+CONFIG_IP6_NF_TARGET_REJECT=y
+CONFIG_IP6_NF_TARGET_SYNPROXY=y
+CONFIG_IP_NF_ARPTABLES=y
+CONFIG_IP_NF_FILTER=y
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_MANGLE=y
+CONFIG_IP_NF_MATCH_RPFILTER=y
+CONFIG_IP_NF_NAT=y
+CONFIG_IP_NF_RAW=y
+CONFIG_IP_NF_TARGET_MASQUERADE=y
+CONFIG_IP_NF_TARGET_REDIRECT=y
+CONFIG_IP_NF_TARGET_REJECT=y
+CONFIG_IP_NF_TARGET_SYNPROXY=y
+CONFIG_IRQ_REMAP=y
+CONFIG_JUMP_LABEL=y
+CONFIG_LEGACY_PTY_COUNT=16
+CONFIG_LEGACY_PTYS=y
+CONFIG_LIBCRC32C=y
+CONFIG_LIBNVDIMM=y
+CONFIG_LLC=y
+CONFIG_LOG_BUF_SHIFT=16
+CONFIG_MATOM=y
+CONFIG_MODVERSIONS=y
+CONFIG_ND_BLK=y
+CONFIG_ND_BTT=y
+CONFIG_ND_CLAIM=y
+CONFIG_NET_ACT_CSUM=y
+CONFIG_NET_ACT_GACT=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_ACT_NAT=y
+CONFIG_NET_ACT_PEDIT=y
+CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_ACT_SIMP=y
+CONFIG_NET_ACT_SKBEDIT=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_IND=y
+CONFIG_NET_CLS_ROUTE4=y
+CONFIG_NET_CLS_RSVP6=y
+CONFIG_NET_CLS_RSVP=y
+CONFIG_NET_CLS_TCINDEX=y
+CONFIG_NET_EMATCH_CMP=y
+CONFIG_NET_EMATCH_META=y
+CONFIG_NET_EMATCH_NBYTE=y
+CONFIG_NET_EMATCH_STACK=32
+CONFIG_NET_EMATCH_TEXT=y
+CONFIG_NET_EMATCH_U32=y
+CONFIG_NET_EMATCH=y
+CONFIG_NETFILTER_NETLINK_LOG=y
+CONFIG_NETFILTER_NETLINK_QUEUE=y
+CONFIG_NETFILTER_NETLINK=y
+CONFIG_NETFILTER_SYNPROXY=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+CONFIG_NETFILTER_XT_MATCH_COMMENT=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_DSCP=y
+CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
+CONFIG_NETFILTER_XT_MATCH_LIMIT=y
+CONFIG_NETFILTER_XT_MATCH_MAC=y
+CONFIG_NETFILTER_XT_MATCH_MARK=y
+CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
+CONFIG_NETFILTER_XT_MATCH_SCTP=y
+CONFIG_NETFILTER_XT_MATCH_U32=y
+CONFIG_NETFILTER_XT_NAT=y
+CONFIG_NETFILTER_XT_TARGET_DSCP=y
+CONFIG_NETFILTER_XT_TARGET_LOG=y
+CONFIG_NETFILTER_XT_TARGET_MARK=y
+CONFIG_NETFILTER_XT_TARGET_REDIRECT=y
+CONFIG_NET_SCH_CBQ=y
+CONFIG_NET_SCH_CHOKE=y
+CONFIG_NET_SCH_CODEL=y
+CONFIG_NET_SCH_DRR=y
+CONFIG_NET_SCH_DSMARK=y
+CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_GRED=y
+CONFIG_NET_SCH_HFSC=y
+CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_NETEM=y
+CONFIG_NET_SCH_PLUG=y
+CONFIG_NET_SCH_PRIO=y
+CONFIG_NET_SCH_QFQ=y
+CONFIG_NET_SCH_RED=y
+CONFIG_NET_SCH_SFB=y
+CONFIG_NET_SCH_SFQ=y
+CONFIG_NET_SCH_TBF=y
+CONFIG_NET_SCH_TEQL=y
+CONFIG_NET_TEAM_MODE_ACTIVEBACKUP=y
+CONFIG_NET_TEAM_MODE_LOADBALANCE=y
+CONFIG_NET_TEAM=y
+CONFIG_NF_CONNTRACK_BROADCAST=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_PPTP=y
+CONFIG_NF_CONNTRACK_SNMP=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CT_PROTO_GRE=y
+CONFIG_NF_DEFRAG_IPV4=y
+CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_LOG_ARP=y
+CONFIG_NF_LOG_BRIDGE=y
+CONFIG_NF_LOG_COMMON=y
+CONFIG_NF_LOG_IPV4=y
+CONFIG_NF_LOG_IPV6=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NF_NAT_PPTP=y
+CONFIG_NF_NAT_PROTO_GRE=y
+CONFIG_NF_NAT_REDIRECT=y
+CONFIG_NF_NAT=y
+CONFIG_NF_REJECT_IPV4=y
+CONFIG_NF_REJECT_IPV6=y
+CONFIG_NF_TABLES_ARP=y
+CONFIG_NF_TABLES_BRIDGE=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES=y
+CONFIG_NFT_BRIDGE_META=y
+CONFIG_NFT_BRIDGE_REJECT=y
+CONFIG_NFT_CHAIN_NAT_IPV4=y
+CONFIG_NFT_CHAIN_NAT_IPV6=y
+CONFIG_NFT_CHAIN_ROUTE_IPV6=y
+CONFIG_NFT_MASQ_IPV4=y
+CONFIG_NFT_MASQ_IPV6=y
+CONFIG_NFT_MASQ=y
+CONFIG_NFT_META=y
+CONFIG_NFT_REDIR_IPV4=y
+CONFIG_NFT_REDIR_IPV6=y
+CONFIG_NFT_REDIR=y
+CONFIG_NFT_REJECT_IPV4=y
+CONFIG_NFT_REJECT_IPV6=y
+CONFIG_NFT_REJECT=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_NO_HZ_FULL=y
+CONFIG_NVME_CORE=y
+CONFIG_NVRAM=y
+CONFIG_OVERLAY_FS=y
+CONFIG_PACKET_DIAG=y
+CONFIG_PANIC_ON_OOPS_VALUE=1
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_PANIC_TIMEOUT=-1
+CONFIG_PINCTRL_DENVERTON=y
+CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=12
+CONFIG_PROC_CHILDREN=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_ZLIB_COMPRESS=y
+CONFIG_RBS_CORE=y
+CONFIG_RBS_DEBUG=y
+CONFIG_RBSERR_BUFFER_SIZE=65536
+CONFIG_RBSERR_ENTRY_SIZE=256
+CONFIG_RBS_FPGA=y
+CONFIG_RBS_GPIO_MAXPINS=40
+CONFIG_RBS_GPIO=y
+CONFIG_RBS_HWL_DEVNAME="hw_log"
+CONFIG_RBS_HWL=y
+CONFIG_RBS_MTDPART=y
+CONFIG_RBSSMEM_PERSIST_ADDR=0x00100000
+CONFIG_RBSSMEM_PERSIST_SIZE=0xef000
+CONFIG_RBS_SPI_INTEL_SPI=y
+CONFIG_RBS_SYS_BB6641=y
+CONFIG_RBS_SYS_BB6648=y
+CONFIG_RBS_SYS_BPU=y
+CONFIG_RBS_SYS_CPM3=y
+CONFIG_RBS_SYS_PLATFORM=y
+CONFIG_RBS_SYS_RP6337=y
+CONFIG_RBS_SYS_RP6347=y
+CONFIG_RCU_CPU_STALL_TIMEOUT=60
+CONFIG_RCU_NOCB_CPU_ALL=y
+CONFIG_RCU_NOCB_CPU=y
+CONFIG_REED_SOLOMON_DEC8=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON=y
+CONFIG_SCHED_INFO=y
+CONFIG_SQUASHFS_4K_DEVBLK_SIZE=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_SQUASHFS_EMBEDDED=y
+CONFIG_SQUASHFS_FILE_DIRECT=y
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=2
+CONFIG_SQUASHFS_LZ4=y
+CONFIG_SQUASHFS_LZO=y
+CONFIG_SQUASHFS_XATTR=y
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS=y
+CONFIG_SQUASHFS_ZLIB=y
+CONFIG_STP=y
+CONFIG_SYSCTL_SYSCALL=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASKSTATS=y
+CONFIG_TEXTSEARCH_BM=y
+CONFIG_TEXTSEARCH_FSM=y
+CONFIG_TEXTSEARCH_KMP=y
+CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
+CONFIG_UIO_PCI_GENERIC=y
+CONFIG_USB_DYNAMIC_MINORS=y
+CONFIG_VETH=y
+CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
+CONFIG_VIRT_CPU_ACCOUNTING=y
+CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
+CONFIG_VIRTIO_MMIO=y
+CONFIG_VIRTIO=y
+CONFIG_VLAN_8021Q=y
+CONFIG_X86_PMEM_LEGACY_DEVICE=y
+CONFIG_X86_PMEM_LEGACY=y
+CONFIG_X86_X2APIC=y
