rmc: Remove recipe since it's not supported upstream
The recipe was removed upstream in meta-intel layer:

commit c12c16659203d677618871f660c1499152a555a8
rmc: remove

It's not being maintained anymore and the scripts have not been kept in
sync with upstream for quite some time.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -23,7 +23,7 @@ SNR_SERIAL_CONSOLE ?= "ttyS4"
 APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
 GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
 
-WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot rmc-boot", \
+WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
 	     "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", "mkefidisk.wks", d)}"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
