conf: Layer updates for thud branch
- add branch compatibilities for both layers
- complete layer dependency list
- update kernel versions supported

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,12 +9,17 @@ BBFILE_COLLECTIONS += "intel-axxia"
 BBFILE_PATTERN_intel-axxia := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-axxia = "5"
 
+LAYERSERIES_COMPAT_intel-axxia = "thud"
 LAYERDEPENDS_intel-axxia = " \
 	core \
+	yocto \
 	openembedded-layer \
 	networking-layer \
 	filesystems-layer \
 	meta-python \
+	perl-layer \
+	security \
+	tpm-layer \
 	virtualization-layer \
 	intel \
 	intel-snr \
