--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -4,10 +4,10 @@ MACHINE = "axxiax86-64"
 RUNTARGET = "snr"
 
 # Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt
-#                   linux-intel, linux-intel-rt
+
 PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 
-# Kernel versions: 4.9, 4.12, 4.14 (for linux-intel)
+# Kernel versions: 4.12, 4.14, 4.18
 PREFERRED_VERSION_linux-yocto = "4.12%"
 
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
