Add UIO and UIO_PCI_GENERIC for All Targets
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -57,3 +57,6 @@ CONFIG_IXGBE=y
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
+
+CONFIG_UIO=m
+CONFIG_UIO_PCI_GENERIC=y
