--- a/meta-intel-snr/recipes-kernel/linux/frags/4.18/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.18/common-non-hw.cfg
@@ -40,3 +40,6 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
+
+CONFIG_UIO=m
+CONFIG_UIO_PCI_GENERIC=y
