axxiax86-64: Create tuning file with sse4.2 support
Create its own tuning file for Snowrige CPU which is a hybrid
started from core2 tunings with sse4.2 support.

We also removed from axxiax86-64 machine the inheritance of
intel-corei7-64 machine from meta-intel to be able to include
the new file tuning (both core2snr and core-i7 inherit core2
which raise an include error).

Because new new tune is unknown for gcc and unsuported for
qemu, we have removed 'qemu-usermode' feature to disable the
use of qemu when building packages for our machine. This will
also disable building introspection data using qemu, but will
still enable building introspection tools and  libraries
(building them does not require the use of qemu).

More details about this you can found here:
https://lists.yoctoproject.org/pipermail/yocto/2016-April/029578.html

As a conseqens of 'qemu-usermode' feature removal, the
postinstall intercept hooks 'update_gio_module_cache' and
'update_font_cache' will not be executed as part of
do_populate_sdk task for the image.

We'll see those warnings:
WARNING: axxia-image-vcn-1.0-r0 do_populate_sdk: The postinstall
intercept hook 'update_gio_module_cache' could not be executed due
to missing qemu usermode support, details in ..log.do_populate_sdk
WARNING: axxia-image-vcn-1.0-r0 do_populate_sdk: The postinstall
intercept hook 'update_font_cache' could not be executed due to
missing qemu usermode support, details in ..log.do_populate_sdk

A0263 - SSE Compiler Default in environment*

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -1,32 +1,31 @@
 #@TYPE: Machine
 #@NAME: axxiax86-64
-#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems (Intel Core i7 CPU and later) with MMX, SSE, SSE2, SSE3, and SSSE3 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
+#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems (Intel Snowridge CPU) with MMX, SSE, SSE2, SSE3, SSSE3, SSE4.1 and SSE4.2 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
 
-require conf/machine/intel-corei7-64.conf
-
-DEFAULTTUNE = "core2-64"
+require conf/machine/include/meta-intel.inc
+require conf/machine/include/tune-core2snr.inc
+require conf/machine/include/intel-common-pkgarch.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.12%"
+PREFERRED_VERSION_linux-yocto ?= "4.18%"
 
-MACHINEOVERRIDES =. "intel-x86-common:"
-
-MACHINE_FEATURES_append = " ext3"
+MACHINE_FEATURES += "pcbios efi"
+MACHINE_FEATURES += "wifi 3g nfc"
+MACHINE_FEATURES += "intel-ucode ext3"
+MACHINE_FEATURES_BACKFILL_CONSIDERED = "qemu-usermode"
 
 KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
+SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS4"
 
 SNR_SERIAL_CONSOLE ?= "ttyS4"
 APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
 GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
 
-WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
-	     "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", "mkefidisk.wks", d)}"
-
-DEFAULTTUNE_virtclass-multilib-lib32 = "core2-32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "core2snr-32"
 MULTILIBS = "multilib:lib32"
 
 IMAGE_FSTYPES += " hddimg"
@@ -34,3 +33,8 @@ IMAGE_FSTYPES += " ext2"
 IMAGE_FSTYPES += " tar.gz"
 IMAGE_FSTYPES += " iso"
 NOISO = "0"
+
+IMAGE_FSTYPES += "wic"
+WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
+	     "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", "mkefidisk.wks", d)}"
+WKS_FILE_DEPENDS_append = " intel-microcode"
