conf/distro: Remove meta-virtualization from BBMASK
The kernel recipes from meta-virtualization were added to BBMASK
some time ago to avoid its fragments to modify the final config.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -22,6 +22,5 @@ PREFERRED_VERSION_rpcbind ?= "0.2.3"
 # Enable SIMICSFS client support
 #DISTRO_FEATURES_append = " simicsfs"
 
-BBMASK_append = " meta-virtualization/recipes-kernel/linux \
-		  ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
-			               'simics-client* libmagicpipe*', d)}"
+BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
+				       'simics-client* libmagicpipe*', d)}"
