--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -37,6 +37,23 @@ CONFIG_DEVKMEM=y
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
+CONFIG_NET_9P=y
+CONFIG_NET_9P_VIRTIO=y
+CONFIG_NET_9P_DEBUG=y
+CONFIG_9P_FS=y
+CONFIG_9P_FS_POSIX_ACL=y
+
+CONFIG_NETWORK_PHY_TIMESTAMPING=y
+
+CONFIG_IGB=y
+CONFIG_IGBVF=y
+CONFIG_IXGB=y
+CONFIG_IXGBE=y
+# CONFIG_I40E is not set
+# CONFIG_I40EVF is not set
+
+# CONFIG_SERIAL_8250_DMA is not set
+
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
