--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -3,11 +3,13 @@ MACHINE = "axxiax86-64"
 # System where the image will run: snr, frio
 RUNTARGET = "snr"
 
-# Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt
+# Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt,
+#                   linux-intel, meta-intel-rt
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 
-# Kernel versions: 4.12, 4.14, 4.18
+# Kernel versions: for linux-yocto: 4.12, 4.14, 4.18
+#                  for linux-intel: 4.14, 4.19
 PREFERRED_VERSION_linux-yocto = "4.12%"
 
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
