Add NVM* Options to All Kernel Versions
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
@@ -47,3 +47,21 @@ CONFIG_UIO_PCI_GENERIC=y
 CONFIG_ACPI_NUMA=y
 
 CONFIG_STAGING=y
+
+CONFIG_NVME_CORE=y
+CONFIG_BLK_DEV_NVME=y
+CONFIG_NVME_MULTIPATH=y
+CONFIG_NVME_FABRICS=y
+CONFIG_NVME_RDMA=m
+CONFIG_NVME_FC=y
+CONFIG_NVME_TARGET=y
+CONFIG_NVME_TARGET_LOOP=y
+CONFIG_NVME_TARGET_RDMA=y
+CONFIG_NVME_TARGET_FC=y
+# CONFIG_NVME_TARGET_FCLOOP is not set
+CONFIG_NVM=y
+CONFIG_NVM_PBLK=m
+# CONFIG_NVM_PBLK_DEBUG is not set
+# CONFIG_BATTERY_BQ27XXX_DT_UPDATES_NVM is not set
+CONFIG_RTC_NVMEM=y
+CONFIG_NVMEM=y
