README: Add info about gcc9 distro feature
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -20,6 +20,9 @@ include conf/distro/include/intel-axxia-defaults.inc
 # Enable SIMICSFS client support
 #DISTRO_FEATURES_append = " simicsfs"
 
+# Enable GCC9 feature for a newer version of gcc and glibc
+#DISTRO_FEATURES_append = " gcc9"
+
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 				       'simics-client* libmagicpipe*', d)}"
 
