--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -8,6 +8,7 @@ require conf/machine/include/intel-common-pkgarch.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 PREFERRED_VERSION_linux-yocto ?= "4.18%"
+PREFERRED_VERSION_autofs ?= "5.1.5"
 
 MACHINE_FEATURES += "pcbios efi"
 MACHINE_FEATURES += "wifi 3g nfc"
