--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
@@ -97,14 +97,14 @@ CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_LRW=y
 
 CONFIG_HW_RANDOM_TPM=m
-CONFIG_TCG_TPM=m
-CONFIG_TCG_TIS_CORE=m
-CONFIG_TCG_TIS=m
-CONFIG_TCG_TIS_I2C_INFINEON=m
-CONFIG_TCG_NSC=m
-CONFIG_TCG_ATMEL=m
-CONFIG_TCG_INFINEON=m
-CONFIG_TCG_CRB=m
+CONFIG_TCG_TPM=y
+CONFIG_TCG_TIS_CORE=y
+CONFIG_TCG_TIS=y
+CONFIG_TCG_TIS_I2C_INFINEON=y
+CONFIG_TCG_NSC=y
+CONFIG_TCG_ATMEL=y
+CONFIG_TCG_INFINEON=y
+CONFIG_TCG_CRB=y
 
 CONFIG_GPIO_PCA953X=y
 CONFIG_I2C_MUX_PCA954x=y
