--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -23,6 +23,13 @@ include conf/distro/include/intel-axxia-defaults.inc
 # Enable GCC9 feature for a newer version of gcc and glibc
 #DISTRO_FEATURES_append = " gcc9"
 
+# Disable building introspection data using qemu
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "gobject-introspection-data"
+# Disable 'update_gio_module_cache 'and 'update_font_cache' postinstall
+# intercept hooks because of missing qemu usermode support
+GIO_MODULE_PACKAGES_forcevariable = ""
+FONT_PACKAGES_forcevariable = ""
+
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 				       'simics-client* libmagicpipe*', d)}"
 
