--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -86,3 +86,17 @@ CONFIG_NVMEM=y
 CONFIG_I2C_CHARDEV=y
 
 CONFIG_I40E_DCB=y
+
+CONFIG_HAVE_KVM_IRQCHIP=y
+CONFIG_HAVE_KVM_IRQFD=y
+CONFIG_HAVE_KVM_IRQ_ROUTING=y
+CONFIG_HAVE_KVM_EVENTFD=y
+CONFIG_KVM_MMIO=y
+CONFIG_KVM_ASYNC_PF=y
+CONFIG_HAVE_KVM_MSI=y
+CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT=y
+CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
+CONFIG_KVM_COMPAT=y
+CONFIG_HAVE_KVM_IRQ_BYPASS=y
+CONFIG_KVM=m
+CONFIG_KVM_INTEL=m
