conf/distro: Disable PIE support
As the RDK won't work with PIE, and in the latest tool-chain PIE
is the default, change the default to include (or be) --no-pie.

A0274 - Change the Default GCC/Binutil Option to --no-pie

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -16,6 +16,7 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 
 include conf/distro/include/intel-axxia-defaults.inc
+include conf/distro/include/intel-axxia-flags.inc
 
 # Enable SIMICSFS client support
 #DISTRO_FEATURES_append = " simicsfs"
