linux-intel: 4.19: Disable STRICT_DEVMEM kernel option
Only DEVMEM option should be enabled.

B0141 - SNR -- Can't Set DEVMEM in the Linux 4.19 Configuration

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -33,6 +33,8 @@ CONFIG_ASN1=y
 # CONFIG_ENCRYPTED_KEYS is not set
 
 CONFIG_DEVKMEM=y
+CONFIG_DEVMEM=y
+# CONFIG_STRICT_DEVMEM is not set
 
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
