--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -10,10 +10,7 @@ SDK_VERSION := "${RELEASE_VERSION}"
 TARGET_VENDOR = "-intelaxxia"
 RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 
-DISTRO_FEATURES_append = " pam systemd virtualization kvm"
-DISTRO_FEATURES_BACKFILL_CONSIDERED_append = " sysvinit"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+DISTRO_FEATURES_append = " pam virtualization kvm"
 
 include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-flags.inc
