--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -7,7 +7,7 @@ require conf/machine/include/tune-core2snr.inc
 require conf/machine/include/intel-common-pkgarch.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.18%"
+PREFERRED_VERSION_linux-yocto ?= "4.19%"
 PREFERRED_VERSION_autofs ?= "5.1.5"
 
 MACHINE_FEATURES += "pcbios efi"
@@ -18,6 +18,8 @@ MACHINE_FEATURES_BACKFILL_CONSIDERED = "qemu-usermode"
 KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
+
+EFI_PROVIDER ?= "grub-efi"
 
 SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS4"
@@ -37,5 +39,6 @@ NOISO = "0"
 
 IMAGE_FSTYPES += "wic"
 WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
-	     "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", "mkefidisk.wks", d)}"
+	   "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", \
+	   "grub-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", d)}"
 WKS_FILE_DEPENDS_append = " intel-microcode"
