--- a/meta-intel-axxia/conf/bblayers.conf.sample
+++ b/meta-intel-axxia/conf/bblayers.conf.sample
@@ -15,6 +15,7 @@ BBLAYERS ?= " \
   ##OEROOT##/../meta-openembedded/meta-perl \
   ##OEROOT##/../meta-security \
   ##OEROOT##/../meta-security/meta-tpm \
+  ##OEROOT##/../meta-ros \
   ##OEROOT##/../meta-virtualization \
   ##OEROOT##/../meta-intel \
   ##OEROOT##/../meta-intel-axxia/meta-intel-axxia \
