linux: Fix kernel options warnings
Get rid of all the build warnings related to kernel options
mismatches or not defined in the kernel tree.

First cause for those warnings is that lxc fragment from
meta-virtualization layer is created for 4.14 and 4.18 kernel
versions which are the default version in thud branch. It
contains some options which are not defined in 4.19 kernel.
We remove lxc and doker fragments from SRC_URI and add important
options in lxc-axxia fragment.

Second cause for those warnings is that for some kernel options
we set a different value in meta-intel-axxia than defined upstream
(in other fragments from other meta layers or yocto-kernel-cache).
Bitbake is not complainig about overwritten kernel options, but it
does if those kernel options are dependencies for other options
which disapear or are unset in the final config because of their
dependenies even if they are explicitly enabled in fragments.

A0259 - snr: Lots of kernel option warnings on thud branch

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/lxc-axxia.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/lxc-axxia.cfg
@@ -16,11 +16,21 @@ CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
-CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+
+CONFIG_NET_CLS_CGROUP=m
+CONFIG_BLK_CGROUP=y
+CONFIG_CGROUP_NET_PRIO=y
+
+# Virtual drivers
+CONFIG_HVC_DRIVER=y
 
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
+CONFIG_PROC_PID_CPUSET=y
+CONFIG_CGROUP_SCHED=y
+CONFIG_FAIR_GROUP_SCHED=y
+CONFIG_RT_GROUP_SCHED=y
 
 CONFIG_VETH=y
 CONFIG_MACVLAN=y
@@ -28,7 +38,15 @@ CONFIG_BRIDGE=y
 CONFIG_NETFILTER=y
 CONFIG_EXPERT=y
 
+# Base support for live boot
+CONFIG_BLK_DEV_LOOP=y
+CONFIG_NLS_CODEPAGE_437=y
+CONFIG_NLS_ISO8859_1=y
+CONFIG_VFAT_FS=y
+CONFIG_RD_GZIP=y
+
 CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_NAMESPACES=y
 CONFIG_FHANDLE=y
 CONFIG_UNIX_DIAG=y
 CONFIG_PACKET_DIAG=y
@@ -37,8 +55,6 @@ CONFIG_INET_UDP_DIAG=y
 CONFIG_NETLINK_DIAG=y
 
 CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
