--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
@@ -15,7 +15,7 @@ CONFIG_ACPI_PCI_SLOT=y
 CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_HOTPLUG_PCI_ACPI=y
 CONFIG_HOTPLUG_PCI_ACPI_IBM=m
-CONFIG_HOTPLUG_PCI_SHPC=m
+CONFIG_HOTPLUG_PCI_SHPC=y
 
 CONFIG_PPS_CLIENT_GPIO=m
 CONFIG_GPIO_ICH=m
@@ -96,7 +96,7 @@ CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_LRW=y
 
-CONFIG_HW_RANDOM_TPM=m
+CONFIG_HW_RANDOM_TPM=y
 CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS_CORE=y
 CONFIG_TCG_TIS=y
