linux-intel: 4.19: Enable AER and MCE INJECT
Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
@@ -11,6 +11,11 @@
 #
 #.........................................................................
 
+CONFIG_PCIEAER_INJECT=y
+CONFIG_ACPI_APEI_PCIEAER=y
+CONFIG_X86_MCE_INJECT=y
+CONFIG_X86_MCELOG_LEGACY=y
+
 CONFIG_ACPI_PCI_SLOT=y
 CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_HOTPLUG_PCI_ACPI=y
