axxiax86-64: Fix settings for kernel PREFERRED_VERSION
Set kernel PREFERRED_VERSION for linux-intel and linux-intel-rt
prior to inheriting meta-intel.inc.
Otherwise, the settings from meta-intel will always overwrite
the ones from meta-axxia-intel.

Also, move PREFERRED_VERSION for autofs in distro file and update
local.conf.sample with supported kernels and versions.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -2,13 +2,13 @@
 #@NAME: axxiax86-64
 #@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems (Intel Snowridge CPU) with MMX, SSE, SSE2, SSE3, SSSE3, SSE4.1 and SSE4.2 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
 
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-intel"
+PREFERRED_VERSION_linux-intel ?= "4.19%"
+PREFERRED_VERSION_linux-intel-rt ?= "4.19%"
+
 require conf/machine/include/meta-intel.inc
 require conf/machine/include/tune-core2snr.inc
 require conf/machine/include/intel-common-pkgarch.inc
-
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.19%"
-PREFERRED_VERSION_autofs ?= "5.1.5"
 
 MACHINE_FEATURES += "pcbios efi"
 MACHINE_FEATURES += "wifi 3g nfc"
