--- a/meta-intel-axxia/conf/local.conf.sample
+++ b/meta-intel-axxia/conf/local.conf.sample
@@ -3,14 +3,12 @@ MACHINE = "axxiax86-64"
 # System where the image will run: snr, frio
 RUNTARGET = "snr"
 
-# Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt,
-#                   linux-intel, meta-intel-rt
+# Kernel providers: linux-intel, linux-intel-rt
+PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
-
-# Kernel versions: for linux-yocto: 4.12, 4.14, 4.18
-#                  for linux-intel: 4.14, 4.19
-PREFERRED_VERSION_linux-yocto = "4.12%"
+# Kernel versions: 4.19
+PREFERRED_VERSION_linux-intel = "4.19%"
+PREFERRED_VERSION_linux-intel-rt = "4.19%"
 
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
 DISTRO_FEATURES_append = " simicsfs"
