--- a/meta-intel-axxia/conf/local.conf.sample
+++ b/meta-intel-axxia/conf/local.conf.sample
@@ -3,12 +3,14 @@ MACHINE = "axxiax86-64"
 # System where the image will run: snr, frio
 RUNTARGET = "snr"
 
-# Kernel providers: linux-intel, linux-intel-rt
+# Kernel providers: linux-intel, linux-intel-rt, linux-intel-debug, linux-intel-rt-debug
 PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 
-# Kernel versions: 4.19
-PREFERRED_VERSION_linux-intel = "4.19%"
-PREFERRED_VERSION_linux-intel-rt = "4.19%"
+# Kernel versions: only 4.19 is supported and is set by default
+#PREFERRED_VERSION_linux-intel = "4.19%"
+#PREFERRED_VERSION_linux-intel-rt = "4.19%"
+#PREFERRED_VERSION_linux-intel-debug = "4.19%"
+#PREFERRED_VERSION_linux-intel-rt-debug = "4.19%"
 
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
 DISTRO_FEATURES_append = " simicsfs"
