Enable multilib via DISTRO_FEATURES
Create multilib distro feature which will be enabled from
local.conf via DISTRO_FEATURES mechanism.
It will add multilib settings from upstream conf/multilib.conf
and also will add some lib32 version for some packages in all
axxia images

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -1,4 +1,6 @@
-require conf/distro/poky.conf
+require conf/distro/poky.conf \
+	${@bb.utils.contains('DISTRO_FEATURES', 'multilib', \
+	'conf/multilib.conf', '', d)}
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
