Fix multilib install binaries conflicts
In a multilib build, some update-alternatives warnings are showing
that multiple providers for some binaries were installed with
the same priority:

[log_check] axxia-image-vcn: found 6 warning messages in the logfile:
[log_check] Warn: update-alternatives: libtool has multiple providers with
    the same priority, please check /usr/lib/opkg/alternatives/libtool
[log_check] Warn: update-alternatives: icu-config has multiple providers
    with the same priority, please check usr/lib/opkg/alternatives/icu-config
[log_check] Warn: update-alternatives: g-ir-annotation-tool has multiple
    providers with the same priority, please check
    /usr/lib/opkg/alternatives/g-ir-annotation-tool
[log_check] Warn: update-alternatives: g-ir-scanner has multiple providers
    with the same priority, please check /usr/lib/opkg/alternatives/g-ir-scanner
[log_check] Warn: update-alternatives: python-config has multiple providers with
    the same priority, please check /usr/lib/opkg/alternatives/python-config
[log_check] Warn: update-alternatives: gpgrt-config has multiple providers with
    the same priority, please check /usr/lib/opkg/alternatives/gpgrt-config

The update-alternatives class is used to register a binary provided
by a package that may have an alternative implementation in a some
other package. But the case when the alternative binary cames from
the multilib version of the package is handled by multilib_script
class which mark up those binaries so that they can be handled
using update-alternatives.

For icu-config binary, we have in /usr/lib/opkg/alternatives/icu-config:
/usr/bin/icu-config
/usr/bin/icu-config-lib64 10
/usr/bin/icu-config-lib 10

We set lower priority for multilib package (lib32-*) which provides
/usr/bin/icu-config-lib and highter for the default version
/usr/bin/icu-config-lib64 through ALTERNATIVE_PRIORITY variable.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -15,6 +15,7 @@ RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 DISTRO_FEATURES_append = " pam virtualization kvm"
 
 include conf/distro/include/intel-axxia-defaults.inc
+include conf/distro/include/intel-axxia-custom.inc
 include conf/distro/include/intel-axxia-flags.inc
 
 # Enable SIMICSFS client support
