--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/debug.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/debug.cfg
@@ -33,6 +33,10 @@ CONFIG_LOCK_STAT=y
 CONFIG_DEBUG_LOCKDEP=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
 
+CONFIG_KASAN=y
+CONFIG_KASAN_GENERIC=y
+CONFIG_KASAN_OUTLINE=y
+
 CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_HIGHMEM=y
 CONFIG_DEBUG_MEMORY_INIT=y
