--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -20,6 +20,7 @@ CONFIG_ASN1=y
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
+CONFIG_BPF_SYSCALL=y
 # CONFIG_RANDOMIZE_BASE is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_TYPHOON is not set
