Make GCC 9 the Default Instead of GCC 8
The README describes how to keep using GCC 8 if desired.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -21,8 +21,8 @@ include conf/distro/include/intel-axxia-flags.inc
 # Enable SIMICSFS client support
 #DISTRO_FEATURES_append = " simicsfs"
 
-# Enable GCC9 feature for a newer version of gcc and glibc
-#DISTRO_FEATURES_append = " gcc9"
+# Enable GCC8 feature for the previous version of gcc and glibc
+#DISTRO_FEATURES_append = " gcc8"
 
 # Disable building introspection data using qemu
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "gobject-introspection-data"
