axxia-image-vcn: Install modules for alternative kernels
By default, only the modules for the preferred virtual/kernel are
instaled in rootfs. With this commit, we'll Install also the modules
for alternative kernels.

A side effect is that the rootfs size for a axxia-image-vcn image
grows from 3.5G to 4.03G and exeeds the FAT32 limit size. That's why
we can't support hddimg rootfs type which is based on FAT32:

ERROR: axxia-image-vcn-1.0-r0 do_bootimg:
       axxia-image-vcn-1.0/hddimg/rootfs.img rootfs size is greather
       than or equal to 4GB, and this doesn't work on a FAT filesystem.
       You can either: 1) Reduce the size of rootfs.img, or, use wic,
       vmdk or vdi instead of hddimg

B0179 - Only the "Main" Kernel has Modules in the RFS

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -31,7 +31,7 @@ GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
 DEFAULTTUNE_virtclass-multilib-lib32 = "core2snr-32"
 MULTILIBS = "multilib:lib32"
 
-IMAGE_FSTYPES += " hddimg"
+#IMAGE_FSTYPES += " hddimg"
 IMAGE_FSTYPES += " ext2"
 IMAGE_FSTYPES += " tar.gz"
 IMAGE_FSTYPES += " iso"
