--- a/meta-intel-axxia/conf/distro/intel-axxia.conf
+++ b/meta-intel-axxia/conf/distro/intel-axxia.conf
@@ -32,7 +32,9 @@ GIO_MODULE_PACKAGES_forcevariable = ""
 FONT_PACKAGES_forcevariable = ""
 
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
-				       'simics-client* libmagicpipe*', d)}"
+			'simics-client* libmagicpipe*', d)} \
+		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
+			'meta-intel-axxia/recipes-kernel/lttng', '', d)}"
 
 # Skip linux-yocto recipes from meta-virtualization to avoid warnings for
 # duplicating inclusion of linux-yocto_virtualization.inc.
