axxiax86-64: Change tuning from core2 to tremont
GCC 9 supports tremont CPU which is a better match for Snowridge
CPU than the generic core2.

We'll still use core2 tune settings when building with GCC 8.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -7,7 +7,7 @@ PREFERRED_VERSION_linux-intel ?= "4.19%"
 PREFERRED_VERSION_linux-intel-rt ?= "4.19%"
 
 require conf/machine/include/meta-intel.inc
-require conf/machine/include/tune-core2snr.inc
+require conf/machine/include/tune-snr.inc
 require conf/machine/include/intel-common-pkgarch.inc
 
 MACHINE_FEATURES += "pcbios efi"
@@ -28,7 +28,7 @@ SNR_SERIAL_CONSOLE ?= "ttyS4"
 APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
 GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
 
-DEFAULTTUNE_virtclass-multilib-lib32 = "core2snr-32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "snr-32"
 MULTILIBS = "multilib:lib32"
 
 IMAGE_FSTYPES += " ext2"
