meta-intel-rdk: Rename layer and fix layer dependency
Rename BBFILE_COLLECTIONS for this layer to simplify names and
fix the layer dependency. RDK layer should depend only on
meta-intel-snr layer which is the core BSP layer. It should not
depends on meta-intel-axxia. The purpose of this change is to be
able to build RDK components in a clean Yocto or WRLinux, without
all the specific changes from meta-intel-axxia layer.

A0294 - Meta Layer (meta-intel-axxia for SNR) Cleanup/Refactoring

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -5,12 +5,12 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "intel-axxia-rdk"
-BBFILE_PATTERN_intel-axxia-rdk = "^${LAYERDIR}/"
-BBFILE_PRIORITY_intel-axxia-rdk = "6"
+BBFILE_COLLECTIONS += "intel-rdk"
+BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
+BBFILE_PRIORITY_intel-rdk = "6"
 
-LAYERSERIES_COMPAT_intel-axxia-rdk = "thud"
-LAYERDEPENDS_intel-axxia-rdk = " intel-axxia"
+LAYERSERIES_COMPAT_intel-rdk = "thud"
+LAYERDEPENDS_intel-rdk = "intel-snr"
 
 # Location to populate with the RDK source code archive
 RDK_ARCHIVE_PATH ?= "${LAYERDIR}/downloads"
