meta-intel-rdk: Remove intel-axxia-indist distro
Removing indist distro is a side effect of the layer dependency
change. Since the layers is not depending anymore on meta-intel-axxia
layer, indist distro can't inherit intel-axxia distro anymore

More than that, we can remove indist distro in order to simplify the
setup, since it has no functional settings. If meta-intel-rdk layer
is added in bblayers.conf, then the rdk components will build.
Setting the new distro as before is just an extra unusefull step.

A0294 - Meta Layer (meta-intel-axxia for SNR) Cleanup/Refactoring

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -12,5 +12,4 @@ BBFILE_PRIORITY_intel-rdk = "6"
 LAYERSERIES_COMPAT_intel-rdk = "thud"
 LAYERDEPENDS_intel-rdk = "intel-snr"
 
-# Location to populate with the RDK source code archive
-RDK_ARCHIVE_PATH ?= "${LAYERDIR}/downloads"
+require conf/distro/include/rdk-defaults.inc
