axxiax86-64: Move machine specific setings from axxia distro
Also, disable wifi, 3g and nfc machine features for axxiax86-64.

A0294 - Meta Layer (meta-intel-axxia for SNR) Cleanup/Refactoring

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -11,9 +11,7 @@ require conf/machine/include/tune-snr.inc
 require conf/machine/include/intel-common-pkgarch.inc
 
 MACHINE_FEATURES += "pcbios efi"
-MACHINE_FEATURES += "wifi 3g nfc"
 MACHINE_FEATURES += "intel-ucode ext3"
-MACHINE_FEATURES_BACKFILL_CONSIDERED = "qemu-usermode"
 
 KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
@@ -41,3 +39,10 @@ WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
 	   "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", \
 	   "grub-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", d)}"
 WKS_FILE_DEPENDS_append = " intel-microcode"
+
+# QEMU usermode fails with invalid instruction error
+MACHINE_FEATURES_BACKFILL_CONSIDERED_append = " qemu-usermode"
+# Disable 'update_gio_module_cache 'and 'update_font_cache' postinstall
+# intercept hooks because of missing qemu usermode support
+GIO_MODULE_PACKAGES_forcevariable = ""
+FONT_PACKAGES_forcevariable = ""
