linux: Don't include settings from virtualization layer
Since we has some conflicts between kernel settings and
fragments from meta-virtualization and meta-intel-snr ones
(e.g. 4.19 kernel is not supported in thud so fragments are not
accurate), do not include anymore linux-yocto_virtualization
include file. Required settings and kernel options are
moved to the recipes and fragments from meta-intel-snr.

A0294 - Meta Layer (meta-intel-axxia for SNR) Cleanup/Refactoring

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -22,7 +22,6 @@ CONFIG_ASN1=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_BPF_SYSCALL=y
 # CONFIG_RANDOMIZE_BASE is not set
-# CONFIG_MACVLAN is not set
 # CONFIG_TYPHOON is not set
 # CONFIG_DL2K is not set
 # CONFIG_JME is not set
@@ -116,3 +115,6 @@ CONFIG_ITCO_WDT=m
 
 CONFIG_IRQ_REMAP=y
 CONFIG_X86_X2APIC=y
+
+CONFIG_BRIDGE_NF_EBTABLES=m
+CONFIG_BRIDGE_EBT_T_NAT=m
