--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
@@ -36,10 +36,6 @@ CONFIG_NETFILTER_NETLINK=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 # CONFIG_NF_CT_PROTO_DCCP is not set
-# CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
-# CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
-CONFIG_NF_NAT_IPV4=m
-CONFIG_NF_NAT_MASQUERADE_IPV4=m
 CONFIG_NF_NAT_PROTO_GRE=m
 CONFIG_NF_NAT_PPTP=m
 CONFIG_NF_NAT_H323=m
@@ -48,8 +44,8 @@ CONFIG_NF_NAT_H323=m
 # CONFIG_IP_NF_SECURITY is not set
 
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_ACT_POLICE=m
 
-# CONFIG_OPENVSWITCH is not set
 # CONFIG_MPLS is not set
 # CONFIG_CGROUP_NET_PRIO is not set
 
@@ -82,7 +78,6 @@ CONFIG_SPI_INTEL_SPI_PLATFORM=y
 # CONFIG_VIRTIO_BLK is not set
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_SCSI_VIRTIO is not set
-# CONFIG_DM_THIN_PROVISIONING is not set
 
 CONFIG_MDIO_DEVICE=y
 
