--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/lxc-axxia.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/lxc-axxia.cfg
@@ -33,7 +33,7 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 
 CONFIG_VETH=y
-CONFIG_MACVLAN=y
+CONFIG_MACVLAN=m
 CONFIG_BRIDGE=y
 CONFIG_NETFILTER=y
 CONFIG_EXPERT=y
@@ -55,6 +55,7 @@ CONFIG_INET_UDP_DIAG=y
 CONFIG_NETLINK_DIAG=y
 
 CONFIG_NF_CONNTRACK=y
+CONFIG_NF_NAT=y
 CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
