meta-intel-axxia: Move to master branch
Now, master branch was zeus as compatile layer series.

meta-ros layer has only master branch compatible with old branches.
Add zeus as compatible branch.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "intel-rdk"
 BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-rdk = "6"
 
-LAYERSERIES_COMPAT_intel-rdk = "thud"
+LAYERSERIES_COMPAT_intel-rdk = "zeus"
 LAYERDEPENDS_intel-rdk = "intel-snr"
 
 require conf/distro/include/rdk-defaults.inc
