--- a/meta-intel-snr/conf/layer.conf
+++ b/meta-intel-snr/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "intel-snr"
 BBFILE_PATTERN_intel-snr := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-snr = "5"
 
-LAYERSERIES_COMPAT_intel-snr = "thud"
+LAYERSERIES_COMPAT_intel-snr = "zeus"
 LAYERDEPENDS_intel-snr = "intel"
