--- a/meta-intel-vcn/conf/layer.conf
+++ b/meta-intel-vcn/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "intel-vcn"
 BBFILE_PATTERN_intel-vcn := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-vcn = "5"
 
-LAYERSERIES_COMPAT_intel-vcn = "thud"
+LAYERSERIES_COMPAT_intel-vcn = "zeus"
 LAYERDEPENDS_intel-vcn = " \
 	core \
 	yocto \
@@ -34,3 +34,6 @@ PREMIRRORS_prepend := "\
      ftp://.*/.* file://${LAYERDIR}/downloads/ \n \
      http://.*/.* file://${LAYERDIR}/downloads/ \n \
      https://.*/.* file://${LAYERDIR}/downloads/ \n"
+
+# Add zeus since ros layer is compatible only with old branches 
+LAYERSERIES_COMPAT_ros-layer = "zeus" 
