--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -27,4 +27,6 @@ BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 			'meta-intel-vcn/recipes-kernel/lttng', '', d)} \
 		  ${@bb.utils.contains('BBFILE_COLLECTIONS', 'intel-rdk', \
 			'meta-intel-vcn/recipes-connectivity/thrift', '', d)} \
+		  ${@bb.utils.contains('BBFILE_COLLECTIONS', 'tpm-layer', \
+			'meta-tpm/recipes-kernel/linux/linux', '', d)} \
 		  "
